--- a/package.json
+++ b/package.json
@@ -8,5 +8,13 @@
     "dependencies": {
         "@jabberwocky-db/tsconfig": "^1.0.7",
         "@types/node": "^17.0.35"
+    },
+    "prettier": "@jabberwocky-db/prettier-config",
+    "devDependencies": {
+        "@jabberwocky-db/prettier-config": "^2.0.3",
+        "prettier": "^2.6.2"
+    },
+    "scripts": {
+        "format": "yarn prettier . --write"
     }
 }
